# template-mlir-codegen

./: .gitignore  CMakeLists.txt  DEBUG_assembly.asm  Dockerfile  LICENSE  MLIRCodegen.cpp  MLIRCodegen.hpp  Makefile  README.md  Reproduction.md  TemplateBuilder.cpp  TemplateBuilder.hpp  TemplateCompiler.cpp  TemplateCompiler.hpp  TemplateLibrary.cpp  TemplateLibrary.hpp  TypeSize.cpp  TypeSize.hpp  common.hpp
Execution/: AddressPatchMap.hpp  Baseline.hpp  Executor.hpp  JIT.cpp  JIT.hpp  LLI.cpp  LLI.hpp  MLIRExecutionEngine.cpp  MLIRExecutionEngine.hpp  MemInterface.cpp  MemInterface.hpp  RegisterExecutor.hpp  StackExecutor.hpp
Execution/CallingConventions/: Register.cpp  Stack.cpp
Preparation/: AArch64.h  Abstraction.cpp  Abstraction.hpp  BinaryParser.cpp  BinaryParser.hpp  BinaryParserAArch64.cpp  BinaryParserX86.cpp  CustomPass.cpp  CustomPass.hpp  SectionProvider.cpp  SectionProvider.hpp  Utils.cpp  Utils.hpp  X86.h
Samples/: bm1.mlir  bm2.mlir  bm3.mlir  bm4.mlir  bm5.mlir  bm6.mlir  fib.c  quick.c  sample0.mlir  sample1.mlir  sample10.mlir  sample11.mlir  sample12.mlir  sample13.mlir  sample14.mlir  sample15.mlir  sample16.mlir  sample17.mlir  sample18.mlir  sample19.mlir  sample2.mlir  sample20.mlir  sample21.mlir  sample22.mlir  sample23.mlir  sample24.mlir  sample25.mlir  sample26.mlir  sample27.mlir  sample28.mlir  sample29.mlir  sample3.mlir  sample30.mlir  sample31.mlir  sample32.mlir  sample33.mlir  sample34.mlir  sample35.mlir  sample36.mlir  sample37.mlir  (+16 more)
Templates/: PredefinedPatterns.hpp  Signature.cpp  Signature.hpp  Template.cpp  Template.hpp
Templates/Custom/: Builtins.cpp  Builtins.hpp  Internal.cpp  Internal.hpp  LLVM.cpp  LLVM.hpp  Utils.cpp  Utils.hpp
lingo-db-llvm/: 0001-LLVM-patches-for-lingo-db.patch
llvm.patch/: 0001-Fixes-for-mlir-codegen.patch  0002-Make-opaque-properties-comparable.patch  0003-Retrieving-properties-as-attributes-without-operatio.patch
utils/: benchmark.py  common.py  debug-benchmark.py  polybench.patch  run-all.sh  run-debug.sh  spec.py  tests.py  viz.py
utils/spec-build/: 505-build.sh  525-build.sh  548-build.py  557-build.sh  build-all.sh
